# Stellar-RFQ

./: .gitignore  Cargo.toml  Makefile  README.md
contracts/rfq/: Cargo.toml
contracts/rfq/src/: errors.rs  hash.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/rfq/test_snapshots/test/: cancel_pair_by_salt.1.json  fill_or_kill_reverts_on_partial.1.json  hash_is_deterministic_and_pubkey_registered.1.json  limit_order_fee_taken_from_maker_output.1.json  limit_order_with_taker_fee.1.json  maker_own_key_fills_without_registration.1.json  protocol_fee_routed_to_collector.1.json  rfq_cancel.1.json  rfq_expired.1.json  rfq_partial_then_full_fill.1.json  rfq_rejects_unregistered_signer.1.json  rfq_rejects_wrong_origin.1.json  rfq_rejects_wrong_taker.1.json
contracts/test_token/: Cargo.toml
contracts/test_token/src/: lib.rs
deployments/: testnet.json
docs/: TECHNICAL_ARCHITECTURE.md
scripts/: 00-setup.sh  01-build.sh  02-deploy.sh  03-seed-demo.sh  e2e.sh  lib.sh  strkey.mjs
