[package]
name = "rfq"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "0x-style RFQ + limit order on-chain settlement for Stellar Soroban"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Used only in tests to produce real ed25519 order signatures.
ed25519-dalek = "2"
# Used only in tests to derive a G... account address from an ed25519 key.
stellar-strkey = "0.0.13"
# Trustline-free token for the maker-own-key test (real G... accounts need a
# trustline for the SAC, but not for a custom Soroban token).
test_token = { path = "../test_token" }
