[package]
name = "test_token"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Minimal Soroban token (token interface) for RFQ demos/tests"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
